--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,43 +8,69 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_margin="4dp">
 
         <TextView
             android:layout_width="120dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginEnd="4dp"
             android:gravity="end"
             android:text="OID : "
-            android:textSize="30sp"/>
+            android:textSize="24sp" />
 
-        <EditText
+        <android.support.v7.widget.AppCompatEditText
             android:id="@+id/oid_field"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="1.3.6.1.2.1.2.2.1.7.1" />
+            android:layout_height="match_parent"
+            android:inputType="text"
+            android:maxLines="1"
+            android:padding="0dp"
+            android:text="1.3.6.1.2.1.2.2.1.7.1" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_margin="4dp">
 
         <TextView
             android:layout_width="120dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="4dp"
+            android:gravity="end"
+            android:text="Type : "
+            android:textSize="24sp" />
+
+        <Spinner
+            android:id="@+id/type_spinner"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_margin="4dp">
+
+        <TextView
+            android:layout_width="120dp"
+            android:layout_height="match_parent"
             android:layout_marginEnd="4dp"
             android:gravity="end"
             android:text="Value : "
-            android:textSize="30sp" />
+            android:textSize="24sp" />
 
-        <EditText
+        <android.support.v7.widget.AppCompatEditText
             android:id="@+id/value_field"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="2"/>
+            android:layout_height="match_parent"
+            android:inputType="text"
+            android:maxLines="1"
+            android:padding="0dp"
+            android:text="3" />
 
     </LinearLayout>
 
@@ -59,9 +85,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@color/colorPrimaryDark"
-            android:text="SNMPGET"
-            android:textColor="#FFFFFF"/>
-        
+            android:text="@string/snmp_get"
+            android:textColor="#FFFFFF" />
+
         <View
             android:layout_width="4dp"
             android:layout_height="match_parent" />
@@ -72,8 +98,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@color/colorPrimaryDark"
-            android:text="SNMPSET"
-            android:textColor="#FFFFFF"/>
+            android:text="@string/snmp_set"
+            android:textColor="#FFFFFF" />
 
         <View
             android:layout_width="4dp"
@@ -85,8 +111,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@color/colorPrimaryDark"
-            android:text="SNMPWALK"
-            android:textColor="#FFFFFF"/>
+            android:text="@string/snmp_walk"
+            android:textColor="#FFFFFF" />
 
     </LinearLayout>
 
@@ -98,7 +124,8 @@
         <TextView
             android:id="@+id/result_text_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:padding="8dp" />
 
     </ScrollView>
 
